--- a/index.html
+++ b/index.html
@@ -1,49 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" class="page">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="/main.48b3db1d.css">
-  
-<script src="/main.48b3db1d.js"></script></head>
-<body>
-    <div class="container">
-      <div class="block">
-        <div class="block__left">
-          <h1 class="page__title">Showcase</h1>
-          <div class="case">
-            <ul class="case__list">
-              <li class="case__item">
-                <a href="https://devtkach.github.io/Kickstarter/" target="_blank" class="case__link">Kickstarter</a>
-              </li>
-              <li class="case__item">
-                <a href="https://devtkach.github.io/Eco_cosmetics/#" target="_blank" class="case__link">Eco Cosmetics</a>
-              </li>
-              <li class="case__item">
-                <a href="https://devtkach.github.io/layout_miami/" target="_blank" class="case__link">Miami</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="block__right">
-          <h1 class="page__title">Contact</h1>
-          <div class="case">
-            <ul class="case__list">
-              <li class="case__item">
-                <a href="mailto:devtkach@gmail.com" target="_blank" class="case__link">Email</a>
-              </li>
-              <li class="case__item">
-                <a href="https://telegram.me/nizkeit" target="_blank" class="case__link">Telegram</a>
-              </li>
-              <li class="case__item">
-                <a href="tel:+380986448497" target="_blank" class="case__link">Phone</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-</body>
-</html>
+<!DOCTYPE html><html lang="en" class="page"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Document</title><link rel="stylesheet" href="main.23d6d7c8.css"></head><body> <div class="container"> <div class="block"> <div class="block__left"> <h1 class="page__title">Showcase</h1> <div class="case"> <ul class="case__list"> <li class="case__item"> <a href="https://devtkach.github.io/Kickstarter/" target="_blank" class="case__link">Kickstarter</a> </li> <li class="case__item"> <a href="https://devtkach.github.io/Eco_cosmetics/#" target="_blank" class="case__link">Eco Cosmetics</a> </li> <li class="case__item"> <a href="https://devtkach.github.io/layout_miami/" target="_blank" class="case__link">Miami</a> </li> </ul> </div> </div> <div class="block__right"> <h1 class="page__title">Contact</h1> <div class="case"> <ul class="case__list"> <li class="case__item"> <a href="mailto:devtkach@gmail.com" target="_blank" class="case__link">Email</a> </li> <li class="case__item"> <a href="https://telegram.me/nizkeit" target="_blank" class="case__link">Telegram</a> </li> <li class="case__item"> <a href="tel:+380986448497" target="_blank" class="case__link">Phone</a> </li> </ul> </div> </div> </div> </div> </body></html>
